tests/baselines/reference/AmbientModuleAndAmbientFunctionWithTheSameNameAndCommonRoot.errors.txt
module.d.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== module.d.ts (1 errors) ====
    declare module Point {
                   ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var Origin: { x: number; y: number; }
    }
    
==== function.d.ts (0 errors) ====
    declare function Point(): { x: number; y: number; }
    
==== test.ts (0 errors) ====
    var cl: { x: number; y: number; }
    var cl = Point();
    var cl = Point.Origin;